--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - dev
+      - 2.0x
   pull_request:
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ['ubuntu-20.04', 'ubuntu-18.04']
-        php-versions: [7.4', '8.0']
+        php-versions: ['7.4', '8.0']
         phpunit-versions: ['9.5']
     steps:
     - name: Checkout
@@ -32,3 +32,8 @@ jobs:
     
     - name: Run Tests
       run: vendor/bin/phpunit -c phpunit.xml.dist --coverage-clover build/logs/clover.xml
+
+    - name: Send coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        file: build/logs/clover.xml
