--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ['ubuntu-20.04', 'ubuntu-18.04']
-        php-versions: ['7.3', '7.4', '8.0', '8.1']
+        php-versions: ['7.3', '7.4', '8.0']
         phpunit-versions: ['9.5']
     steps:
     - name: Checkout
